fix: make scrolling more consistent and usable on windows
Use new scrollbar component that is consistent between macOS and Windows.

Related to #73

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,13 @@
 body, html, #root, .app {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    color: #444;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  color: #444;
+  .ps__rail-x {
+    &:hover > .ps__thumb-x, &.ps--clicking .ps__thumb-x {
+      height: 9px;
+    }
+  }
 }
