--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -1,7 +1,7 @@
 .tabs {
   max-width: fit-content;
-  overflow-x: auto;
   overflow-y: hidden;
+  position: relative;
   .nav-tabs {
     display: inline-flex;
     border-bottom: none;
